refactor: delete unnecessary endpoint, change nullchecking strategy, convert for cycles to streams